--- a/ktc-web/css/tablet-style.css
+++ b/ktc-web/css/tablet-style.css
@@ -760,14 +760,14 @@
     display: none;
   }
 
-  .proud-regis-complete p {
+  .proud-regis-complete p, .form-register-completed p {
     font-size: 14px;
     font-family: "Conv_SukhumvitTadmai_Bol";
     line-height: 22px;
     padding-bottom: 10px;
   }
 
-  .proud-regis-complete span{
+  .proud-regis-complete span, .form-register-completed span {
     font-size: 12px;
     font-family: "Conv_SukhumvitTadmai_Tex";
   }
@@ -776,6 +776,10 @@
     width: 84px;
     height: auto;
     margin: 60px 0 24px 0;
+  }
+
+  section .form-register-completed .img-result {
+    margin-top: 0;
   }
 
   .sub-sticky{
