--- a/ktc-web/scss/merchant.scss
+++ b/ktc-web/scss/merchant.scss
@@ -498,10 +498,6 @@ section#section-merchant-register-form {
     background-color: $color-blue;
   }
 
-  .img-result {
-    margin-top: 85px;
-  }
-
   .row-merchant-download-docs {
     margin-top: 30px;
     margin-bottom: 30px;
